--- a/notifications.html
+++ b/notifications.html
@@ -3,6 +3,6 @@
 <body>
 <h1>JGames101's Notification Extension</h1>
 <p>Extension that allows you to trigger notifications in Scratch!</p>
-<p> Open the example project here: <button onclick:"http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/notifications.sbx#scratch">Example Project!</button>
+<p> Open the example project here: <a href="http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/notifications.sbx#scratch"><button>Example Project!</button></a>
 </body>
 </html>
