--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,200" rel="stylesheet">
+<link href="jgames101.github.io/styles.css" rel="stylesheet" type="text/css">
+</head>
 <body>
-<p>THIS PAGE WILL BE UPDATED IN THE FUTURE. THIS IS CURRENTLY JUST A GATEWAY TO CONTENT.</p>
-<p>Please go to <a href="notifications.html">jgames101.github.io/notifications.html</a> thanks</p>
+<h1>JGames101's Scratch Extensions</h1>
+<div class="content">
+  <div class="card">
+    <p>THIS PAGE WILL BE UPDATED IN THE FUTURE. THIS IS CURRENTLY JUST A GATEWAY TO CONTENT.</p>
+    <p>Please go to <a href="notifications.html">jgames101.github.io/notifications.html</a> thanks</p>
+  </div>
+</div>
 </body>
 </html>
