--- a/notifications.html
+++ b/notifications.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,200" rel="stylesheet">
+  <link href="jgames101.github.io/styles.css" rel="stylesheet" type="text/css">
+  <title>Notifications | Scratch Extension</title>
+</head>
 <body>
 <h1>JGames101's Notification Extension</h1>
-<p>Extension that allows you to trigger notifications in Scratch!</p>
-<p> Open the example project here: <a href="http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/notifications.sbx#scratch"><button>Example Project!</button></a></p>
+<div class="content">
+  <div class="card">
+    <p>Extension that allows you to trigger browser notifications in Scratch!</p>
+    <p> Open the example project here: <a href="http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/notifications.sbx#scratch"><button>Example Project!</button></a></p>
+  </div>
+</div>
 </body>
 </html>
