--- a/notifications.html
+++ b/notifications.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,200" rel="stylesheet">
-  <link href="jgames101.github.io/styles.css" rel="stylesheet" type="text/css">
+  <link href="styles.css" rel="stylesheet" type="text/css">
   <title>Notifications | Scratch Extension</title>
 </head>
 <body>
