--- a/notifications.html
+++ b/notifications.html
@@ -12,6 +12,11 @@
     <p>Extension that allows you to trigger browser notifications in Scratch!</p>
     <p> Open the example project here: <a href="http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/notifications.sbx#scratch"><button>Example Project!</button></a></p>
   </div>
+  <div class="card">
+    <h2>USAGE</h2>
+    <p>To use, simply bring out the notification block. The first time you use it, the browser will most likely ask for permission to show notifications. After that, the notifications just appear.</p>
+    <p>Enter the title, content and image URL you would like to show, run it, and tada! It appears!</p>
+  </div>
 </div>
 </body>
 </html>
