--- a/notifications.html
+++ b/notifications.html
@@ -14,7 +14,7 @@
   </div>
   <div class="card">
     <h2>USAGE</h2>
-    <p>To use, simply bring out the notification block. The first time you use it, the browser will most likely ask for permission to show notifications. After that, the notifications just appear.</p>
+    <p>To use, simply bring out the notification block. If notification permission was denied, the block won't work.</p>
     <p>Enter the title, content and image URL you would like to show, run it, and tada! It appears!</p>
   </div>
 </div>
