--- a/notifications.html
+++ b/notifications.html
@@ -9,13 +9,31 @@
 <h1>JGames101's Notification Extension</h1>
 <div class="content">
   <div class="card">
+    <h2>INFORMATION/INSTALLING</h2>
     <p>Extension that allows you to trigger browser notifications in Scratch!</p>
     <p> Open the example project here: <a href="http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/notifications.sbx#scratch"><button>Example Project!</button></a></p>
+    <p> Or open a blank instance here: <a href="http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/notifications.js#scratch"><button>Example Project!</button></a></p>
   </div>
   <div class="card">
     <h2>USAGE</h2>
     <p>To use, simply bring out the notification block. If notification permission was denied, the block won't work.</p>
     <p>Enter the title, content and image URL you would like to show, run it, and tada! It appears!</p>
+  </div>
+  <div class="card">
+    <h2>DEBUGGING</h2>
+    <p>If you're having problems getting the extension to work, try the following:</p>
+    <ul>
+      <li>First of all: Are the blocks appearing?
+      <ul>
+        <li>If they are, check if the light beside the name of the extension is red. If it is, your browser either doesn't support notifications, or you have said that scratchx can't use notifications. The fix depends on your browser.
+        <li>If it's green, there's really not much to be done. Relauch your browser and ensure Flash is up to date.
+      </ul>
+      <li>If the blocks aren't appearing, it's a whole different issue.
+      <ul>
+        <li>Make sure that the extension actually gets loaded in. Click "load extension", find the option for URL, and paste in https://jgames101.github.io/scratch-extensions/notifications.js
+       </ul>
+    </ul>
+    <p>Hopefully that fixed your issue! Best of luck with my extensions!</p>
   </div>
 </div>
 </body>
