--- a/notifications.html
+++ b/notifications.html
@@ -12,7 +12,7 @@
     <h2>INFORMATION/INSTALLING</h2>
     <p>Extension that allows you to trigger browser notifications in Scratch!</p>
     <p> Open the example project here: <a href="http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/notifications.sbx#scratch"><button>Example Project!</button></a></p>
-    <p> Or open a blank instance here: <a href="http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/notifications.js#scratch"><button>Example Project!</button></a></p>
+    <p> Or open a blank instance here: <a href="http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/notifications.js#scratch"><button>Empty Project!</button></a></p>
   </div>
   <div class="card">
     <h2>USAGE</h2>
