--- a/localstorage.html
+++ b/localstorage.html
@@ -27,7 +27,7 @@
 <div class="content">
 	<div class="card">
     <h2>USE THE EXTENSION</h2>
-    <p><a href="http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/js/localstorage.js#scratch"><button class="mdc-button mdc-button--raised">Blank Project</button></a></p>
+    <p><button class="mdc-button mdc-button--raised" onclick="window.open('http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/js/localstorage.js#scratch', '_blank')">Blank Project</button></a></p>
   </div>
 </div>
 </div>
