--- a/localstorage.html
+++ b/localstorage.html
@@ -24,7 +24,7 @@
 <div id="page">
 <h1 id="pageName">LocalStorage Extension</h1>
 <div class="colourBackground">
-<div class="content">
+<div class="content" style="text-align:center;">
     	<h2>USE THE EXTENSION</h2>
     	<p><button class="mdc-button mdc-button--raised" onclick="window.open('http://scratchx.org/?url=https://jgames101.github.io/scratch-extensions/js/localstorage.js#scratch', '_blank')">Blank Project</button></a></p>
 	<h2>WHAT DOES IT DO?</h2>
